--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,10 @@
       <h2 class="subTitle">Posts</h2>
       <button class="loadPost" onclick="fetchPosts()">Load Posts</button>
       <input type="text" id="filter-input" placeholder="Filter by title or content">
-      <button onclick="filterPosts()">All Categories</button>
+      <div class="filter-container">
+        <input type="text" id="filter-input" placeholder="Filter by title or content">
+        <button class="filterBtn" onclick="filterPosts()">All Categories</button>
+      </div>
       <!-- <select id="title-filter"> -->
         <!-- <option value="">All Categories</option> -->
         <!-- <option value="gitHub">GitHub</option> -->
