--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
       <button class="submitPost" onclick="createPost()">Submit Post</button> 
       <h2 class="subTitle">Posts</h2>
       <button class="loadPost" onclick="fetchPosts()">Load Posts</button>
-      <input type="text" id="filter-input" placeholder="Filter by title or content">
+      <input type="text" id="filter-input" placeholder="Filter by title,content or postedBy">
       <button class="filterBtn" onclick="filterPosts()">All Categories</button>
 
 <!-- Display Posts -->
